home page desktop

--- a/_application/template/include/common/contactForm.pug
+++ b/_application/template/include/common/contactForm.pug
@@ -3,7 +3,10 @@ section.section-p-80.feedback-section
 	.container
 		.row
 			.col-md-12
-				h2.text-center Записаться на прием
+				h2.text-center.with-description Записаться на прием
+				.title-description.text-center.
+					Оставьте свои данные, чтобы записаться на прием<br>
+					и мы Вам перезвоним для уточнения деталей.
 
 		form(action="#")#feedback
 			.row
