--- a/_application/template/include/index/advantages-section.pug
+++ b/_application/template/include/index/advantages-section.pug
@@ -3,7 +3,10 @@ section.advantages-section-index.section-p-80
 	.container
 		.row
 			.col-md-12
-				h2.text-center Преимущества
+				h2.text-center.with-description Преимущества
+				.title-description.text-center.
+					Благодаря новейшим современным технологиям и материалам<br>
+					лечение проходит быстро и безболезненно.
 
 			.col-md-3.col-sm-6.col-6
 				.advantage-wrapper
