--- a/_application/template/include/index/carousel.pug
+++ b/_application/template/include/index/carousel.pug
@@ -1,37 +1,41 @@
 #carousel.carousel.slide(data-ride="carousel")
 
 	.carousel-inner(role="listbox")
-		.carousel-item.active(style="background: url(images/slider/sovremennaya_ortodontiya_v_moskve.jpg) no-repeat;background-size: cover;", alt="Современная ортодонтия в Москве")
-			.carousel-caption.d-flex.align-items-center
-				.flex-column(style="width: 100%")
-					h2.
-						ПЕРЕДОВАЯ ОРТОДОНТИЯ <br> В МОСКВЕ
-					//- p.
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-
-					a.btn.btn-primary.hvr-grow-shadow(href="", target="_blank") Подробнее
+		.carousel-item.active(style="background: url(images/slider/1_nikolaeva_nadezhda_vrach-ortodont_v_moskve.jpg) no-repeat;background-size: cover;", alt="Современная ортодонтия в Москве")
+			.container
+				.carousel-caption.d-flex.align-items-center
+					.flex-column(style="width: 100%")
+						h2.
+							Красивая <br> 
+							улыбка - залог  <br> 
+							крепкого здоровья
+						p.
+							Современная ортодонтия в москве
+						a.btn.btn-primary.hvr-grow-shadow(href="", target="_blank") Подробнее
 
 					
 		.carousel-item(style="background: url(images/slider/nikolaeva_nadezhda_vrach-ortodont_v_moskve.jpg) no-repeat;background-size: cover;", alt="Николаева Надежда Николаевна врач-ортодонт в Москве")
-			.carousel-caption.d-flex.align-items-center
-				.flex-column(style="width: 100%")
-					h2.
-						ПЕРЕДОВАЯ ОРТОДОНТИЯ <br> В МОСКВЕ
-					//- p.
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+			.container
+				.carousel-caption.d-flex.align-items-center
+					.flex-column(style="width: 100%")
+						h2.
+							ПЕРЕДОВАЯ ОРТОДОНТИЯ <br> В МОСКВЕ
+						//- p.
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
 
-					a.btn.btn-primary.hvr-grow-shadow(href="", target="_blank") Подробнее
+						a.btn.btn-primary.hvr-grow-shadow(href="", target="_blank") Подробнее
 
 
 		.carousel-item(style="background: url(images/slider/premium_breket-sistemi_v_moskve.jpg) no-repeat;background-size: cover;", alt="Премиум брекет-системы в Москве")
-			.carousel-caption.d-flex.align-items-center
-				.flex-column(style="width: 100%")
-					h2.
-						ПЕРЕДОВАЯ ОРТОДОНТИЯ <br> В МОСКВЕ
-					//- p.
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+			.container
+				.carousel-caption.d-flex.align-items-center
+					.flex-column(style="width: 100%")
+						h2.
+							ПЕРЕДОВАЯ ОРТОДОНТИЯ <br> В МОСКВЕ
+						//- p.
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
 
-					a.btn.btn-primary.hvr-grow-shadow(href="", target="_blank") Подробнее
+						a.btn.btn-primary.hvr-grow-shadow(href="", target="_blank") Подробнее
 
 	.container.slider-bottom-container
 
