--- a/_application/template/include/index/faq.pug
+++ b/_application/template/include/index/faq.pug
@@ -2,13 +2,12 @@
 section.faq-section-index
 	.container
 		.row
-			.col-md-12
-				h2.text-center Часто задаваемые вопросы 
+			.col-md-6
+				.wrapper.d-flex.justify-content-end.align-items-center.flex-wrap.align-content-center
+					h2.text-center Часто<br>задаваемые<br>вопросы 
 
-				p.
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-		.row
-			.col-md-12
-				.btn-wrapper
-					a.btn.btn-primary.hvr-grow-shadow(href="#") читать дальше
+					p.
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+					.btn-wrapper
+						a.btn.btn-primary.hvr-grow-shadow(href="#") читать дальше
 // *FAQ* 
