--- a/_application/template/include/index/services-section.pug
+++ b/_application/template/include/index/services-section.pug
@@ -3,7 +3,10 @@ section.services-section-index.section-p-80
 	.container
 		.row
 			.col-md-12
-				h1.text-center Услуги
+				h1.text-center.with-description Услуги
+				.title-description.text-center.
+					Найдите интересующую Вас услугу и скорее записывайтесь на прием!<br>
+					Чем раньше Вы начнете лечение - тем быстрее станете здоровыми.
 		.row.services-case-wrapper
 			.item-group.d-flex.justify-content-center
 				.col-md-6.item.wow.zoomIn(data-wow-delay="0.4s", data-wow-duration="0.7s")
@@ -12,22 +15,32 @@ section.services-section-index.section-p-80
 							img(src="images/services/ortodonts.jpg", alt="")
 						h4.services-title Ортодонтия
 						p.services-description.
-							Ортодонтическое личение. <br/> Исправление прикуса. <br/> Цифровая ортодонтия, 3D диагностика.
+							Ортодонтическое личение.<br/>
+							Исправление прикуса.<br/>
+							Цифровая ортодонтия,<br/>
+							3D диагностика.
+
 				.col-md-6.item.wow.zoomIn(data-wow-delay="0.7s", data-wow-duration="0.7s")
 					a.service-case(href="#").hvr-grow
 						.service-image-wrapper
 							img(src="images/services/theraphy.jpg", alt="")
 						h4.services-title Терапия
 						p.services-description.
-							Лечение и профилактика кариеса.<br/> Глубокое фторирование.<br/> Подготовка к ортодонти-му лечению.
+							Лечение и профилактика<br/>
+							кариеса, глубокое<br/>
+							фторирование, подготовка<br/>
+							к ортодонтическому лечению
+
 			.item-group.d-flex.justify-content-center
 				.col-md-6.item.wow.zoomIn(data-wow-delay="0.9s", data-wow-duration="0.7s")
 					a.service-case(href="#").hvr-grow
 						.service-image-wrapper
 							img(src="images/services/Aesthetic.jpg", alt="")
-						h4.services-title(style="font-size: 15.5px;") Эстетическая стоматология
+						h4.services-title Эстетическая стоматология
 						p.services-description.
-							Реставрация и восстановление зубов.<br/> Виниры и люминиры. <br/>Отбеливание и проф. чистка зубов.
+							Реставрация и восстановление<br/>
+							зубов, виниры и люминиры.<br/>
+							Отбеливание и чистка зубов.
 							
 				.col-md-6.item.item.wow.zoomIn(data-wow-delay="1.2s", data-wow-duration="0.6s")
 					a.service-case(href="#").hvr-grow
@@ -35,7 +48,11 @@ section.services-section-index.section-p-80
 							img(src="images/services/training.jpg", alt="")
 						h4.services-title Обучение гигиене
 						p.services-description.
-							Индивидуальный уход за зубами.<br/> Подбор средств гигиены.<br/> Контроль с помощью маркёров.
+							Индивидуальный уход<br/>
+							за зубами, подбор средств<br/>
+							гигиены, контроль<br>
+							с помощью маркёров.
+
 		.row.all-services
 			.col-md-12.text-center
 				a.btn.btn-primary(href="/bild/services.html").hvr-grow-shadow все услуги
