--- a/_application/scss/include/_variables.scss
+++ b/_application/scss/include/_variables.scss
@@ -244,10 +244,10 @@ $grid-gutter-widths: (
 //
 // Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif: "UbuntuRegular", Arial, sans-serif;
-$font-family-serif:      "UbuntuRegular", "Times New Roman", Times, serif !default;
-$font-family-monospace:  "UbuntuRegular", monospace !default;
-$font-family-base:       $font-family-sans-serif !default;
+$font-family-sans-serif: "UbuntuRegular";
+$font-family-serif:      "UbuntuRegular";
+$font-family-monospace:  "UbuntuRegular";
+$font-family-base:       $font-family-sans-serif;
 
 $font-size-base: 14px; // Assumes the browser default, typically `16px`
 $font-size-lg:   1.25rem !default;
@@ -416,11 +416,11 @@ $input-padding-x:                25px;
 $input-padding-y:                15px;
 $input-line-height:              1.25 !default;
 
-$input-bg:                       $white !default;
+$input-bg:                       #f7f7f7;
 $input-bg-disabled:              $gray-lighter !default;
 
 $input-color:                    #333333;
-$input-border-color:             #333333;
+$input-border-color:             transparent;
 $input-btn-border-width:         2px; // For form controls and buttons
 $input-box-shadow:               inset 0 1px 1px rgba($black,.075) !default;
 
@@ -433,7 +433,7 @@ $input-border-focus:             lighten($brand-primary, 25%) !default;
 $input-box-shadow-focus:         $input-box-shadow, rgba($input-border-focus, .6) !default;
 $input-color-focus:              $input-color !default;
 
-$input-color-placeholder:        #b8b9b9;
+$input-color-placeholder:        rgba(0,0,0,.54);
 
 $input-padding-x-sm:             .5rem !default;
 $input-padding-y-sm:             .25rem !default;
