--- a/_application/scss/style/index/about-section.scss
+++ b/_application/scss/style/index/about-section.scss
@@ -10,12 +10,9 @@ section.about-section-index {
 		margin-bottom: .5rem;
 	}
 
-	@media (min-width: 540px) {
-		@include box-shadow(0px 0px 5px 0px rgba(0,0,0,0.75));
-	}
-
 	.content-about {
 		margin-top: 24px;
+		max-width: 480px;
 	}
 
 	p {
@@ -30,9 +27,6 @@ section.about-section-index {
 
 		.item-about-advantages {
         	@media (min-width: 992px) {
-				margin-top: 30px;
-			}
-        	@media (max-width: 991px) {
 				margin-top: 25px;
 			}
 
