--- a/_application/scss/style/index/advantages-section.scss
+++ b/_application/scss/style/index/advantages-section.scss
@@ -2,18 +2,7 @@
 section.advantages-section-index {
     z-index: 1;
     position: relative;
-    background: url(../../images/bg/bg_advantages_index.jpg) no-repeat center;
-    height: 680px;
-
-    &::after {
-	    content: '';
-	    position: absolute;
-	    top: 0;
-	    bottom: 0;
-	    left: 0;
-	    right: 0;
-	    background: rgba(3, 21, 56, 0.76);
-	}
+    background: #f7f7f7;
 
 	> .container {
 		z-index: 1;
@@ -45,7 +34,7 @@ section.advantages-section-index {
 		}
 
 		.advantage-icon {
-			margin: 0 auto 35px;
+			margin: 0 auto 28px;
 			border: 2px solid $blue;
 			border-radius: 50%;
 
