--- a/_application/scss/style/index/carousel.scss
+++ b/_application/scss/style/index/carousel.scss
@@ -2,6 +2,11 @@
     @media (max-width: 539px) {
         display: none;
     }
+
+    .btn-primary {
+        float: left;
+        margin-left: 90px;
+    }
 }
 
 .carousel-item {
@@ -27,10 +32,11 @@
 
 .carousel-indicators {
     bottom: auto;
-    margin: 0px;
-    left: 100px;
+    margin: 0;
+    left: auto;
     width: 230px;
     top: 3px;
+    right: 363px;
 
     @media (max-width: 991px) {
         left: 0;
@@ -52,20 +58,24 @@
 }
 
 .carousel-caption {
-    height: calc(100% - 120px);
     position: absolute;
     top: 0;
-    left: -50%;
-    right: -50%;
-    margin: auto;
-    width: 75%;
+    bottom: 0;
+    width: 670px;
+    height: 100%;
+    right: 10px;
+    left: auto;
+    background: rgba(68,121,224,.5);
 
     h2 {
-        font-size: 42px;
+        font-size: 48px;
         margin-bottom: 30px;
-        font-family: "UbuntuBold";
-        text-shadow: 2px 2px rgba(10, 10, 10, 0.2);
-        color: rgba(255,255,255,0.96);
+        text-shadow: 2px 2px rgba(10,10,10,.2);
+        color: rgba(255,255,255,.96);
+        text-align: left;
+        padding-left: 90px;
+        padding-right: 90px;
+        font-family: "UbuntuRegular";
 
         @media (max-width: 1229px) {
             font-size: 34px;
@@ -82,7 +92,12 @@
     }
 
     p {
-        margin-bottom: 40px;
+        margin-bottom: 30px;
+        font-size: 18px;
+        font-family: "UbuntuMedium";
+        padding-left: 90px;
+        padding-right: 90px;
+        text-align: left;
     }
 }
 
