--- a/_application/scss/style/index/faq.scss
+++ b/_application/scss/style/index/faq.scss
@@ -1,15 +1,25 @@
 /* FAQ */
 .faq-section-index {
-	background: url(../../images/bg/index_faq.jpg) no-repeat center;
+	background: url(../../images/bg/index_faq_nadezhda.jpg) no-repeat center;
     background-size: cover;
     position: relative;
 	color: $white;
+	max-height: 535px;
+	overflow: hidden;
+	
+	.wrapper {
+	    width: 100%;
+	    max-width: 600px;
+	    height: 100%;
+	    max-height: 535px;
+	    background: rgba(68,121,224,.5);
+	    padding: 35px 65px;
+	    text-align: right;
+	}
 
     @media (min-width: 992px) {
-		padding: 120px 0;
     }
     @media (max-width: 991px) {
-		padding: 60px 0;
 	}
 
 	&::before {
@@ -20,10 +30,13 @@
 
     h1, h2, h3, h4 {
 		color: $white;
-		text-align: left !important;
 		width: 720px;
 		margin: 0 auto;
-		margin-bottom: 50px;
+	    text-align: right !important;
+		margin-bottom: 48px;
+		letter-spacing: 0.5px;
+		line-height: 56px;
+		text-transform: uppercase;
 
 		@media (max-width: 780px) {
 			width: 100%;
@@ -39,7 +52,8 @@
     .btn-wrapper {
 		width: 720px;
 		margin: 0 auto;
-		margin-top: 50px;
+		margin-top: 35px;
+		@include clamp(4, 110px);
 
 		@media (max-width: 780px) {
 			width: 100%;
@@ -52,12 +66,11 @@
     }
 
 	p {
-		text-align: left !important;
+	    text-align: right;
 		width: 720px;
 		margin: 0 auto;
 		margin: 0 auto;
 	    letter-spacing: 0.5px;
-	    padding-left: 30px;
 	    position: relative;
     	font-size: 18px;
 
@@ -67,26 +80,10 @@
 			padding-right: 30px;
     	}
 
-	    &::before {
-	    	content: '';
-	    	position: absolute;
-	    	height: calc(100% - 12px);
-	    	width: 6px;
-	    	background: $white;
-	    	left: 0;
-	    	top: 8px;
-
-        	@media (max-width: 780px) {
-				left: 20px;
-        	}
-	    }
-
         @media (max-width: 960px) and (min-width: 781px) {
-			padding-right: 50px;
 			font-size: 16px;
         }
         @media (max-width: 780px) {
-			padding-right: 30px;
 			font-size: 14px;
 		}
 	}
