--- a/_application/scss/style/themes.scss
+++ b/_application/scss/style/themes.scss
@@ -22,7 +22,7 @@ a.btn:hover {
     font-size: 16px;
     border-radius: 0;
     padding: 14px 20px;
-    letter-spacing: 2px;
+    letter-spacing: 4px;
     text-transform: uppercase;
 	font-family: "UbuntuBold";
 
@@ -52,44 +52,56 @@ a.btn:hover {
 	}
 }
 
+.title-description {
+    margin-bottom: 50px;
+    font-size: 18px;
+    color: rgba(0,0,0,.54);
+}
+
 section.section-p-80 {
-    padding: 70px 0;
+    padding: 94px 0;
 
     @media (max-width: 767px) {
-        padding: 55px 0;
+        padding: 74px 0;
     }
 
     @media (max-width: 539px) {
-        padding: 35px 0;
+        padding: 50px 0;
     }
 }
 
 h1, h2 {
-    font-size: 42px;
+    font-size: 48px;
     margin-top: -10px;
-    font-family: "UbuntuBold";
+    font-family: "UbuntuLight";
     margin-bottom: 70px;
-    color: rgba(0,0,0,.78);
+    color: rgba(68,121,224,.84);
 
     @media (min-width: 992px) and (max-width: 1229px) {
-        font-size: 36px;
+        font-size: 42px;
     }
 
     @media (max-width: 991px) {
         margin-bottom: 40px;
-        font-size: 30px;
+        font-size: 36px;
     }
 
     @media (max-width: 767px) {
-        font-size: 26px;
+        font-size: 28px;
         margin-bottom: 35px;
+    }
+
+    &.with-description {
+        margin-bottom: 26px;
+        text-transform: uppercase;
+        font-size: 40px;
     }
 }
 
 .description-mini {
-    color: rgba(0,0,0,.7);
+    color: rgba(0,0,0,.54);
     margin: 20px 0;
-    font-size: 16px;
+    font-size: 24px;
     font-family: "UbuntuBold";
 }
 
