--- a/_application/template/include/index/about-section.pug
+++ b/_application/template/include/index/about-section.pug
@@ -10,12 +10,12 @@ section.about-section-index.section-p-80(data-js-init="indexPage")
 				
 				.content-about.align-content-center.flex-wrap.d-flex
 					p.
-						В моем понимании <strong>ортодонтия</strong> - это красивая и здоровая улыбка. 
+						В моем понимании <strong>ортодонтия</strong> - это здоровая и красивая улыбка. 
 						<br>
-						Вы стесняетесь улыбаться, по причине того, что у Вас диастема (щербинка) между зубками? Неправильный прикус ? Другие дефекты полости рта?
+						Вы стесняетесь улыбаться, из-за того, что у Вас диастема (щербинка между зубками)? Неправильный прикус ? Другие дефекты полости рта?
 						<br>
 						<br>
-						Поверьте, это не проблема! И я буду рада почочь Вам стать еще красивее, чем Вы есть! Благодаря современной ортодонтии все пройдет безболезненно и быстро!
+						Поверьте, это исправимо! И я буду рада помочь Вам стать еще красивее, чем Вы есть! Благодаря современной ортодонтии все пройдет безболезненно и быстро!
 
 
 					.about-list-advantages
