--- a/_application/template/include/index/faq.pug
+++ b/_application/template/include/index/faq.pug
@@ -7,7 +7,7 @@ section.faq-section-index
 					h2.text-center Часто<br>задаваемые<br>вопросы 
 
 					p.
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+						Брекеты портят эмаль зубов и после них образуется кариес?
 					.btn-wrapper
-						a.btn.btn-primary.hvr-grow-shadow(href="#") читать дальше
+						a.btn.btn-primary.hvr-grow-shadow(href="#") читать ответ
 // *FAQ* 
