--- a/_application/scss/include/_variables.scss
+++ b/_application/scss/include/_variables.scss
@@ -409,14 +409,13 @@ $btn-border-radius-sm:           $border-radius-sm !default;
 
 $btn-transition:                 all .2s ease-in-out !default;
 
-
 // Forms
 
 $input-padding-x:                25px;
 $input-padding-y:                15px;
 $input-line-height:              1.25 !default;
 
-$input-bg:                       #f7f7f7;
+$input-bg:                       #eeeeee;
 $input-bg-disabled:              $gray-lighter !default;
 
 $input-color:                    #333333;
