--- a/_application/template/include/index/about-section.pug
+++ b/_application/template/include/index/about-section.pug
@@ -6,7 +6,7 @@ section.about-section-index.section-p-80(data-js-init="indexPage")
 				h1 Надежда Николаева
 				span.description-mini Врач-ортодонт
 				
-				img.doctor-photo-mobile(src="images/vrach-ortodont_Nikolaeva_Nadezhda_ortodonts.ru.jpg", alt="ortodonts.ru")
+				img.doctor-photo-mobile(src="images/vrach-ortodont_Nikolaeva_Nadezhda_ortodonts.jpg", alt="ortodonts.ru")
 				
 				.content-about.align-content-center.flex-wrap.d-flex
 					p.
