--- a/_application/template/include/index/faq.pug
+++ b/_application/template/include/index/faq.pug
@@ -2,9 +2,9 @@
 section.faq-section-index
 	.container
 		.row
-			.col-md-6
+			.col-md-6.col-sm-7
 				.wrapper.d-flex.justify-content-end.align-items-center.flex-wrap.align-content-center
-					h2.text-center Часто<br>задаваемые<br>вопросы 
+					h2 Часто<br>задаваемые<br>вопросы 
 
 					p.
 						Брекеты портят эмаль зубов и после них образуется кариес?
