--- a/_application/scss/style/footer.scss
+++ b/_application/scss/style/footer.scss
@@ -6,6 +6,11 @@ footer {
 	position: relative;
 	z-index: 1;
 
+    @media (max-width: 767px) {
+    	padding: 15px;
+    }
+
+
 	@media (max-width: 440px) {
 		.col-4 {
 			flex: 0 0 100%;
