--- a/_application/scss/style/index/carousel.scss
+++ b/_application/scss/style/index/carousel.scss
@@ -6,6 +6,11 @@
     .btn-primary {
         float: left;
         margin-left: 90px;
+        
+        @media (max-width: 767px) {
+            margin-left: 50px;
+        }
+
     }
 }
 
@@ -13,21 +18,21 @@
     height: 560px;
     overflow: hidden;
 
-	@media (max-width: 1229px) {
-    	height: 420px;
-	}
+    @media (max-width: 1229px) {
+        height: 420px;
+    }
 
-	@media (max-width: 992px) {
-    	height: 360px;
-	}
+    @media (max-width: 991px) {
+        height: 360px;
+    }
 
-	@media (max-width: 769px) {
-    	height: 300px;
-	}
+    @media (max-width: 767px) {
+        height: 250px;
+    }
 
-	@media (max-width: 577px) {
-    	height: 420px;
-	}
+    @media (max-width: 577px) {
+        height: 420px;
+    }
 }
 
 .carousel-indicators {
@@ -38,8 +43,15 @@
     top: 3px;
     right: 363px;
 
+
+    @media (max-width: 1229px) {
+        right: 240px;
+    }
     @media (max-width: 991px) {
-        left: 0;
+        right: 160px;
+    }
+    @media (max-width: 767px) {
+        right: 65px;
     }
 
     li {
@@ -54,6 +66,12 @@
         margin-left: 2px;
         background: transparent;
         border: 2px solid $white;
+   
+       @media (max-width: 767px) {
+            max-width: 10px;
+            height: 10px;
+       }
+
     }
 }
 
@@ -67,8 +85,20 @@
     left: auto;
     background: rgba(68,121,224,.5);
 
+    @media (max-width: 1229px) {
+        width: 550px;
+    } 
+    
+    @media (max-width: 991px) {
+        width: 465px;
+    }    
+    @media (max-width: 767px) {
+        padding-bottom: 40px;
+        width: 330px;
+    }
+
     h2 {
-        font-size: 48px;
+        font-size: 45px;
         margin-bottom: 30px;
         text-shadow: 2px 2px rgba(10,10,10,.2);
         color: rgba(255,255,255,.96);
@@ -76,28 +106,39 @@
         padding-left: 90px;
         padding-right: 90px;
         font-family: "UbuntuRegular";
+        text-transform: uppercase;
 
         @media (max-width: 1229px) {
             font-size: 34px;
         }
-        @media (max-width: 992px) {
-            font-size: 32px;
+        @media (max-width: 991px) {
+            font-size: 26px;
+            margin-bottom: 20px;
         }
-        @media (max-width: 769px) {
-            font-size: 32px;
-        }
-        @media (max-width: 577px) {
-            font-size: 24px;
+        @media (max-width: 767px) {
+            font-size: 18px;
+            margin-bottom: 15px;
+            padding: 0 50px;
         }
     }
 
     p {
-        margin-bottom: 30px;
+        margin-bottom: 40px;
         font-size: 18px;
         font-family: "UbuntuMedium";
         padding-left: 90px;
         padding-right: 90px;
         text-align: left;
+
+        @media (max-width: 991px) {
+            font-size: 16px;
+            margin-bottom: 30px;
+        }
+        @media (max-width: 767px) {
+            font-size: 13px;
+            margin-bottom: 20px;
+            padding: 0 50px;
+        }
     }
 }
 
@@ -108,6 +149,9 @@
     right: -50%;
     margin: auto;
     bottom: 40px; 
+    @media (max-width: 767px) {
+        bottom: 20px;
+    }
 
     @media (max-width: 575px) {
         width: 90%
