--- a/_application/scss/style/index/faq.scss
+++ b/_application/scss/style/index/faq.scss
@@ -7,6 +7,12 @@
 	max-height: 535px;
 	overflow: hidden;
 	
+    @media (max-width: 575px) {
+		.container {
+			padding: 0px;
+		}
+    }
+
 	.wrapper {
 	    width: 100%;
 	    max-width: 600px;
@@ -15,11 +21,20 @@
 	    background: rgba(68,121,224,.5);
 	    padding: 35px 65px;
 	    text-align: right;
-	}
 
-    @media (min-width: 992px) {
-    }
-    @media (max-width: 991px) {
+        @media (max-width: 991px) {
+			height: auto;
+		    padding: 30px 45px;
+	    }
+        @media (max-width: 767px) {
+			padding: 30px 15px;
+        }
+
+	    @media (min-width: 992px) and (max-width: 1229px) {
+	    	height: auto;
+	    	max-height: auto;
+	    }
+
 	}
 
 	&::before {
@@ -38,11 +53,19 @@
 		line-height: 56px;
 		text-transform: uppercase;
 
+	    @media (max-width: 991px) {
+	    	line-height: 42px;
+	    	margin-bottom: 26px;
+	    }
+
 		@media (max-width: 780px) {
 			width: 100%;
 			padding-left: 20px;
 			padding-right: 30px;
     	}
+		@media (max-width: 575px) {
+		    text-align: left !important;
+		}
         @media (max-width: 500px) {
 			font-size: 26px;
 			margin-bottom: 30px;
@@ -60,6 +83,11 @@
 			padding-left: 20px;
 			padding-right: 30px;
     	}
+		@media (max-width: 575px) {
+			.btn-primary {
+				float: right;
+			}
+		}
     	@media (max-width: 500px) {
 			margin-top: 30px;
     	}
@@ -74,17 +102,26 @@
 	    position: relative;
     	font-size: 18px;
 
+	    @media (max-width: 991px) {
+    		font-size: 14px;
+	    }
+
         @media (max-width: 780px) {
 			width: 100%;
 			padding-left: 40px;
 			padding-right: 30px;
+			font-size: 14px;
     	}
+		@media (max-width: 575px) {
+		    text-align: left;
+	        width: 100%;
+    		padding-left: 20px;
+    		padding-right: 120px;
+    		font-size: 14px;
+		}
 
         @media (max-width: 960px) and (min-width: 781px) {
 			font-size: 16px;
         }
-        @media (max-width: 780px) {
-			font-size: 14px;
-		}
 	}
 }
