--- a/_application/scss/style/index/scroll-bottom.scss
+++ b/_application/scss/style/index/scroll-bottom.scss
@@ -17,15 +17,19 @@
 		font-weight: normal;
 		font-size: 12px;
 		color: $white;
+
+		@media (max-width: 767px){
+			font-size: 11px;
+		}
+		
 	}
 
     @media (max-width: 991px) {
-		right: 0;
+		right: 105px;
 	}
 	
 	@media (max-width: 767px){
-		font-size: 11px;
-		bottom: -5px;
+		right: 45px;
 	}
 	
 	.mouse{
@@ -50,6 +54,10 @@
 		margin-left: 24px;
 		cursor: pointer;
 		top: -5px;
+
+		@media (max-width: 767px){
+			margin-left: 8px;
+		}
 		
 		i.bottom{
 			margin-right: -1px;
