--- a/_application/template/include/about/certificates.pug
+++ b/_application/template/include/about/certificates.pug
@@ -6,33 +6,29 @@ section.certificates-section.section-p-80
 				h2.text-center Сертификаты
 
 				.certificates-slider-wrapper
-					.left-arrow.arrow-item(onclick="AboutPage.slider('prev')")
-						i.fa.fa-long-arrow-left
 					.wrapper-slide.align-self-center
 						// ITEM
 						.certificates-item.d-flex.align-self-center
 							a
-								img(src="images/certificates/1.jpg", alt="")
+								img(data-lazy="images/certificates/1.jpg", alt="")
 						// ITEM
 						.certificates-item.d-flex.align-self-center.active
 							a
-								img(src="images/certificates/1.jpg", alt="")
+								img(data-lazy="images/certificates/1.jpg", alt="")
 						// ITEM
 						.certificates-item.d-flex.align-self-center
 							a
-								img(src="images/certificates/1.jpg", alt="")
+								img(data-lazy="images/certificates/1.jpg", alt="")
 						// ITEM
 						.certificates-item.d-flex.align-self-center
 							a
-								img(src="images/certificates/1.jpg", alt="")
+								img(data-lazy="images/certificates/1.jpg", alt="")
 						// ITEM
 						.certificates-item.d-flex.align-self-center
 							a
-								img(src="images/certificates/1.jpg", alt="")
+								img(data-lazy="images/certificates/1.jpg", alt="")
 						// ITEM
 						.certificates-item.d-flex.align-self-center
 							a
-								img(src="images/certificates/1.jpg", alt="")
-					.right-arrow.arrow-item(onclick="AboutPage.slider('next')")
-						i.fa.fa-long-arrow-right
+								img(data-lazy="images/certificates/1.jpg", alt="")
 // *certificates* 
