--- a/_application/template/include/about/ortodont_about_text.pug
+++ b/_application/template/include/about/ortodont_about_text.pug
@@ -3,11 +3,9 @@ section.ortodont_about_text.section-p-80(data-js-init="AboutPage")
 	.container
 		.row
 			.col-md-12
-				h2.text-center Надежда Николаева
-
-				h3 
+				h2.text-center Здравствуйте!
 				p.
-					Здравствуйте! Я практикующий врач-ортодонт. Своей работой делаю людей здоровыми и красивыми. Помогаю избавится от комплексов и стать уверенными в себе. Идеальные зубы с рождения встречаются у 3% всего населения земного шара, а у остальных идеальная ослепительная улыбка — это работа профессионального врача-ортодонта.<br><br>
+					Меня зовут Надежда Николаева, я практикующий врач-ортодонт. Своей работой делаю людей здоровыми и красивыми. Помогаю избавится от комплексов и стать уверенными в себе. Идеальные зубы с рождения встречаются у 3% всего населения земного шара, а у остальных идеальная ослепительная улыбка — это работа профессионального врача-ортодонта.<br><br>
 
 					Я регулярно посещаю семинары и конференции по ортодонтии, повышая свой профессиональный уровень. В работе практикую современные технологии, для того, чтобы диагностика и лечение доставили минимум дискомфорта моим пациентам.<br><br>
 
