--- a/_application/template/include/services/item-list.pug
+++ b/_application/template/include/services/item-list.pug
@@ -4,10 +4,10 @@
 		section.item-service
 			.container
 				.row
-					.col-6
+					.col-6.col-12.col-sm-6
 						.image-item-wrapper
 							img.lazy(data-original="images/services/items/1.jpg", src="images/loading.gif", alt="1")
-					.col-md-6.d-flex.justify-content-center.align-items-center
+					.col-6.col-12.col-sm-6.d-flex.justify-content-center.align-items-center
 						.text-item-wrapper
 							div
 								h3.title-item Ортодонтическое лечение
@@ -18,22 +18,25 @@
 		section.item-service
 			.container
 				.row
-					.col-md-6.d-flex.justify-content-center.align-items-center
+					.col-12.mobile-block
+						.image-item-wrapper
+							img.lazy(data-original="images/services/items/2.jpg", src="images/loading.gif", alt="2")
+					.col-6.col-12.col-sm-6.d-flex.justify-content-center.align-items-center
 						.text-item-wrapper
 							div
 								h3.title-item Цифровая отодонтия и 3D диагностика
 								p.description-item.
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					.col-6
+					.col-6.mobile-block-hide
 						.image-item-wrapper
 							img.lazy(data-original="images/services/items/2.jpg", src="images/loading.gif", alt="2")
 
 				// ITEM
 				.row
-					.col-6
+					.col-6.col-12.col-sm-6
 						.image-item-wrapper
 							img.lazy(data-original="images/services/items/3.jpg", src="images/loading.gif", alt="3")
-					.col-md-6.d-flex.justify-content-center.align-items-center
+					.col-6.col-12.col-sm-6.d-flex.justify-content-center.align-items-center
 						.text-item-wrapper
 							div
 								h3.title-item Исправление прикуса без брекетов
@@ -42,22 +45,25 @@
 
 				// ITEM
 				.row
-					.col-md-6.d-flex.justify-content-center.align-items-center
+					.col-12.mobile-block
+						.image-item-wrapper
+							img.lazy(data-original="images/services/items/4.jpg", src="images/loading.gif", alt="4")
+					.col-6.col-12.col-sm-6.d-flex.justify-content-center.align-items-center
 						.text-item-wrapper
 							div
 								h3.title-item Исправление прикуса брекетами
 								p.description-item.
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					.col-6
+					.col-6.mobile-block-hide
 						.image-item-wrapper
 							img.lazy(data-original="images/services/items/4.jpg", src="images/loading.gif", alt="4")
 
 				// ITEM
 				.row
-					.col-6
+					.col-6.col-12.col-sm-6
 						.image-item-wrapper
 							img.lazy(data-original="images/services/items/5.jpg", src="images/loading.gif", alt="5")
-					.col-md-6.d-flex.justify-content-center.align-items-center
+					.col-6.col-12.col-sm-6.d-flex.justify-content-center.align-items-center
 						.text-item-wrapper
 							div
 								h3.title-item Исправление прикуса каппами
@@ -66,22 +72,25 @@
 
 				// ITEM
 				.row
+					.col-12.mobile-block
+						.image-item-wrapper
+							img.lazy(data-original="images/services/items/6.jpg", src="images/loading.gif", alt="6")
 					.col-md-6.d-flex.justify-content-center.align-items-center
 						.text-item-wrapper
 							div
 								h3.title-item Индивидуализированнные брекеты insignia sl
 								p.description-item.
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					.col-6
+					.col-6.mobile-block-hide
 						.image-item-wrapper
 							img.lazy(data-original="images/services/items/6.jpg", src="images/loading.gif", alt="6")
 
 				// ITEM
 				.row
-					.col-6
+					.col-6.col-12.col-sm-6
 						.image-item-wrapper
 							img.lazy(data-original="images/services/items/7.jpg", src="images/loading.gif", alt="7")
-					.col-md-6.d-flex.justify-content-center.align-items-center
+					.col-6.col-12.col-sm-6.d-flex.justify-content-center.align-items-center
 						.text-item-wrapper
 							div
 								h3.title-item Брекеты damon
