--- a/_application/scss/style/about/certificates.scss
+++ b/_application/scss/style/about/certificates.scss
@@ -4,33 +4,47 @@
 .certificates-section {
 	z-index: 1;
 	position: relative;
-	background: #f4f6fd;
+	background: #f7f7f7;
 
 	.certificates-slider-wrapper {
-		width: calc(100% + 60px);
-		overflow: hidden;
-		margin-left: -60px;
 		position: relative;
-
-    	@media (max-width: 550px) {
-    		height: 415px;
-    	}
-    	@media (max-width: 550px){
-    		height: auto;
-    		padding-bottom: 15px;
-    	}
-
-		@media (max-width: 767px) {
-			margin-left: 0px;
-			width: 100%;
-		}
 
 		.wrapper-slide {
 			@include transition(all 0.4s);
+			position: relative;
+			height: auto;
 
-			@media (max-width: 767px) {
-				width: 100% !important;
-				margin-left: 0px !important;
+			.slick-current {
+				-webkit-transform: scale(1.2);
+				transform: scale(1.2);
+				opacity: 1;
+				top: 10px;
+			    position: relative;
+			}
+
+			.slick-slide {
+		    	height: auto;
+				text-align: center;
+				@include transition(all 0.5s);
+				
+	        	@media (max-width: 767px) {
+					max-height: 380px;
+	        	}
+
+				img {
+					margin: 0 auto;
+				}
+			}
+
+			.slick-list {
+				padding: 40px 30px 50px!important; 
+				
+				@media (min-width: 992px) and (max-width: 1229px){
+					padding: 30px 30px 45px!important; 
+				}
+	        	@media (min-width: 768px) and (max-width: 991px) {
+					padding: 20px 30px 35px!important; 
+				}
 			}
 		}
 
@@ -39,7 +53,7 @@
 			height: 42px;
 			border: 1px solid #212431;
 			position: absolute;
-			left: 380px;
+			left: 372px;
 			top: -50%;
 			bottom: -50%;
 			margin: auto;
@@ -48,16 +62,18 @@
 			padding-top: 8px;
 			cursor: pointer;
 			color: #212431;
+		    z-index: 10;
+		    background: #f7f7f7;
 			@include transition(all 0.2s);
 
 			@media (min-width: 992px) and (max-width: 1229px){
-				left: 280px;
+				left: 295px;
 			}
         	@media (min-width: 768px) and (max-width: 991px) {
 				width: 32px;
 				height: 32px;
 				font-size: 18px;
-				left: 210px;
+				left: 219px;
         	}
         	@media (max-width: 767px) {
 				width: 32px;
@@ -72,20 +88,15 @@
 	    		left: 40px;
 	    	}
 
-			&.disabled {
-				opacity: 0.5;
-				cursor: default;
-			}
-
 			&.right-arrow {
 				left: auto;
-				right: 320px;
+				right: 370px;
 
 				@media (min-width: 992px) and (max-width: 1229px){
-					right: 240px;
+					right: 295px;
 				}
 	        	@media (min-width: 768px) and (max-width: 991px) {
-					right: 180px;
+					right: 219px;
 	        	}
 	        	@media (max-width: 767px) {
 	        		right: 0;
@@ -105,21 +116,21 @@
 		}
 
 		.certificates-item {
-			margin: 0px 30px;
-			text-align: center;
+			margin: 0px 50px;
 			@include transition(opacity 0.3s);
-			width: 280px;
 			opacity: 0.5;
 			float: left;
+		
+			@media (min-width: 992px) and (max-width: 1229px){
+				margin: 0px 40px;
+			}
+        	@media (min-width: 768px) and (max-width: 991px) {
+				margin: 0px 30px;
+        	}
 			
 			img {
 			    max-width: 100%;
-			}
-			
-			&.slick-current {
-				opacity: 1 !important;
-				// margin-left: -30px;
-				// margin-right: -30px;
+			    max-height: 100%;
 			}
 
 		}
