--- a/_application/scss/style/services/item-list.scss
+++ b/_application/scss/style/services/item-list.scss
@@ -1,16 +1,33 @@
 /* ITEM LIST */
 .services-items-wrapper {
 	padding-bottom: 80px;
+	
+	@media (min-width: 768px){
+		.mobile-block {
+			display: none;
+		}
+	}
+	@media (max-width: 767px){
+		.mobile-block-hide {
+			display: none;	
+		}
+		.col-6.col-12.col-sm-6 {
+			flex: 0 0 100%;
+			max-width: 100%;
+		}
+	}
 
 	.item-service{
 
-		.row {
-			.col-6 {
-				&:first-child {
-					padding-right: 0px;
-				}
-				&:last-child {
-					padding-left: 0px;
+		@media (min-width: 768px) {
+			.row {
+				.col-6 {
+					&:first-child {
+						padding-right: 0px;
+					}
+					&:last-child {
+						padding-left: 0px;
+					}
 				}
 			}
 		}
@@ -21,6 +38,11 @@
 				max-width: 100%;
 				max-height: 100%;
 			}
+
+			@media (max-width: 767px){
+				margin-bottom: 24px;
+			}
+
 		}
 
 		.text-item-wrapper {
@@ -32,6 +54,9 @@
 
 			@media (max-width: 991px) {
 			    padding: 5px 20px 5px 20px;
+			}
+			@media (max-width: 767px){
+			    margin-bottom: 50px;
 			}
 			
 			
@@ -46,6 +71,9 @@
 				
 				@media (max-width: 991px) {
 					font-size: 21px;
+				}
+				@media (max-width: 767px){
+					font-size: 18px;
 				}
 			}
 
