--- a/_application/template/about.pug
+++ b/_application/template/about.pug
@@ -10,9 +10,9 @@ html(lang='ru')
 		
 		include include/common/topSection
 		include include/about/ortodont_about_text
-		//- include include/about/advantages-section
-		include include/about/education-section
 		include include/about/certificates
+		include include/about/education-section
+		include include/index/faq
 		include include/common/contactForm
 
 		include include/common/footer
