--- a/_application/template/include/faq/top-line.pug
+++ b/_application/template/include/faq/top-line.pug
@@ -24,6 +24,8 @@
 						i.search-icon
 						|Поиск вопроса
 					input(type="text", name="search").form-control
+					i.fa.fa-spinner.faa-spin.animated
+					i.fa.fa-times
 
 				.clearfix
 			.clearfix
