--- a/_application/scss/include/_variables.scss
+++ b/_application/scss/include/_variables.scss
@@ -220,7 +220,7 @@ $grid-breakpoints: (
 $container-max-widths: (
   sm: 540px,
   md: 720px,
-  lg: 970,
+  lg: 970px,
   xl: 1200px
 ) !default;
 @include _assert-ascending($container-max-widths, "$container-max-widths");
