--- a/_application/scss/style/blog/blog.scss
+++ b/_application/scss/style/blog/blog.scss
@@ -48,6 +48,9 @@
 	    @media (max-width: 991px) {
 	    	padding-top: 90px;
 	    }
+	    @media (max-width: 767px) {
+		    padding: 90px 30px 0px;
+		}
 
 		&::before {
 		    content: "";
@@ -69,3 +72,4 @@
 @import "top-line";
 @import "category-menu";
 @import "item-list";
+@import "post";
