--- a/_application/scss/style/faq/faq-list.scss
+++ b/_application/scss/style/faq/faq-list.scss
@@ -14,6 +14,12 @@
 			padding-left: 40px;
 			cursor: pointer;
 			margin-bottom: 28px;
+
+			@media (max-width: 767px) {
+				font-size: 15px;
+			    margin-bottom: 20px;
+		        padding-left: 30px;
+			}
 			
 			&::before {
 				content: '';
@@ -28,6 +34,12 @@
 				background: url(../../images/icon/list_toggle.png) no-repeat left top;
 				@include transition(opacity 0.4s);
 				@include transition(color 0.4s);
+	
+				@media (max-width: 767px) {
+				    width: 13px;
+    				height: 13px;
+    				background-size: cover;
+				}
 			}
 
 			&:hover {
@@ -49,6 +61,11 @@
 			@include transition(all 0.2s);
 			margin-top: 0px;
 		    margin-bottom: 0;
+
+			@media (max-width: 767px) {
+				padding-left: 30px;
+				font-size: 12px;
+			}
 		}
 
 		&.open {
