--- a/_application/scss/style/index/carousel.scss
+++ b/_application/scss/style/index/carousel.scss
@@ -97,7 +97,11 @@
         width: 330px;
     }
 
-    h2 {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
         font-size: 45px;
         margin-bottom: 30px;
         text-shadow: 2px 2px rgba(10,10,10,.2);
